Add runtime log instead of compile-time log
    * log_lsd
    * log_pex
    * log_dht
    * log_natpmp
    * log_upnp
    * log_session
    * log_torrent (-)
    * log_tracker
    * log_peer_connection
    * log_bt_connection
    * log_web_connection

--- a/libtorrent.vcproj
+++ b/libtorrent.vcproj
@@ -42,7 +42,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				AdditionalIncludeDirectories="include;zlib;include\libtorrent"
-				PreprocessorDefinitions="_DEBUG;WIN32;WIN32_LEAN_AND_MEAN;_WIN32_WINNT=0x0500;BOOST_ALL_NO_LIB;_FILE_OFFSET_BITS=64;BOOST_THREAD_USE_LIB;UNICODE;_SCL_SECURE_NO_WARNINGS;_CRT_SECURE_NO_WARNINGS;TORRENT_DISABLE_ENCRYPTION;TORRENT_DISABLE_INVARIANT_CHECKS;TORRENT_VERBOSE_LOGGING;TORRENT_VERBOSE_BANDWIDTH_LIMIT;TORRENT_STATS;TORRENT_DISK_STATS;TORRENT_UPNP_LOGGING"
+				PreprocessorDefinitions="_DEBUG;WIN32;WIN32_LEAN_AND_MEAN;_WIN32_WINNT=0x0500;BOOST_ALL_NO_LIB;_FILE_OFFSET_BITS=64;BOOST_THREAD_USE_LIB;UNICODE;_SCL_SECURE_NO_WARNINGS;_CRT_SECURE_NO_WARNINGS;TORRENT_DISABLE_ENCRYPTION;TORRENT_DHT_VERBOSE_LOGGING;TORRENT_DISABLE_INVARIANT_CHECKS;TORRENT_VERBOSE_LOGGING;TORRENT_VERBOSE_BANDWIDTH_LIMIT;TORRENT_STATS;TORRENT_DISK_STATS;TORRENT_UPNP_LOGGING"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -110,7 +110,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				AdditionalIncludeDirectories="include;zlib;include\libtorrent"
-				PreprocessorDefinitions="WIN32;NDEBUG;_LIB;WIN32_LEAN_AND_MEAN;_WIN32_WINNT=0x0500;BOOST_ALL_NO_LIB;_FILE_OFFSET_BITS=64;BOOST_THREAD_USE_LIB;UNICODE;_SCL_SECURE_NO_WARNINGS;_CRT_SECURE_NO_WARNINGS;TORRENT_DISABLE_ENCRYPTION;TORRENT_VERBOSE_LOGGING"
+				PreprocessorDefinitions="WIN32;NDEBUG;_LIB;WIN32_LEAN_AND_MEAN;_WIN32_WINNT=0x0500;BOOST_ALL_NO_LIB;_FILE_OFFSET_BITS=64;BOOST_THREAD_USE_LIB;UNICODE;_SCL_SECURE_NO_WARNINGS;_CRT_SECURE_NO_WARNINGS;TORRENT_DISABLE_ENCRYPTION;TORRENT_DHT_VERBOSE_LOGGING"
 				RuntimeLibrary="2"
 				UsePrecompiledHeader="0"
 				ObjectFile="$(ProjectDir)\lib\$(ConfigurationName)\"
@@ -176,7 +176,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				AdditionalIncludeDirectories="include;zlib;include\libtorrent"
-				PreprocessorDefinitions="WIN32;NDEBUG;_LIB;WIN32_LEAN_AND_MEAN;_WIN32_WINNT=0x0500;BOOST_ALL_NO_LIB;_FILE_OFFSET_BITS=64;BOOST_THREAD_USE_LIB;UNICODE;_SCL_SECURE_NO_WARNINGS;_CRT_SECURE_NO_WARNINGS;TORRENT_DISABLE_ENCRYPTION"
+				PreprocessorDefinitions="WIN32;NDEBUG;_LIB;WIN32_LEAN_AND_MEAN;_WIN32_WINNT=0x0500;BOOST_ALL_NO_LIB;_FILE_OFFSET_BITS=64;BOOST_THREAD_USE_LIB;UNICODE;_SCL_SECURE_NO_WARNINGS;_CRT_SECURE_NO_WARNINGS;TORRENT_DISABLE_ENCRYPTION;TORRENT_DHT_VERBOSE_LOGGING"
 				RuntimeLibrary="0"
 				UsePrecompiledHeader="0"
 				ObjectFile="$(ProjectDir)\lib\$(ConfigurationName)\"
@@ -242,7 +242,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				AdditionalIncludeDirectories="include;zlib;include\libtorrent"
-				PreprocessorDefinitions="_DEBUG;WIN32;WIN32_LEAN_AND_MEAN;_WIN32_WINNT=0x0500;BOOST_ALL_NO_LIB;_FILE_OFFSET_BITS=64;BOOST_THREAD_USE_LIB;UNICODE;_CRT_SECURE_NO_WARNINGS;_SCL_SECURE_NO_WARNINGS;TORRENT_DISABLE_ENCRYPTION;TORRENT_DISABLE_INVARIANT_CHECKS;TORRENT_VERBOSE_LOGGING;TORRENT_VERBOSE_BANDWIDTH_LIMIT;TORRENT_STATS;TORRENT_DISK_STATS;TORRENT_UPNP_LOGGING"
+				PreprocessorDefinitions="_DEBUG;WIN32;WIN32_LEAN_AND_MEAN;_WIN32_WINNT=0x0500;BOOST_ALL_NO_LIB;_FILE_OFFSET_BITS=64;BOOST_THREAD_USE_LIB;UNICODE;_CRT_SECURE_NO_WARNINGS;_SCL_SECURE_NO_WARNINGS;TORRENT_DISABLE_ENCRYPTION;TORRENT_DHT_VERBOSE_LOGGING;TORRENT_DISABLE_INVARIANT_CHECKS;TORRENT_VERBOSE_LOGGING;TORRENT_VERBOSE_BANDWIDTH_LIMIT;TORRENT_STATS;TORRENT_DISK_STATS;TORRENT_UPNP_LOGGING"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="1"
