--- a/examples/client_test.vcproj
+++ b/examples/client_test.vcproj
@@ -41,7 +41,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				AdditionalIncludeDirectories="..\include;..\include\libtorrent;..\zlib"
-				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;WIN32_LEAN_AND_MEAN;_WIN32_WINNT=0x0500;BOOST_ALL_NO_LIB;_FILE_OFFSET_BITS=64;BOOST_THREAD_USE_LIB;TORRENT_BUILDING_SHARED;TORRENT_LINKING_SHARED;UNICODE;TORRENT_DISABLE_ENCRYPTION;TORRENT_DISABLE_INVARIANT_CHECKS;TORRENT_VERBOSE_LOGGING;TORRENT_VERBOSE_BANDWIDTH_LIMIT;TORRENT_DHT_VERBOSE_LOGGING;TORRENT_STATS;TORRENT_DISK_STATS;TORRENT_UPNP_LOGGING"
+				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;WIN32_LEAN_AND_MEAN;_WIN32_WINNT=0x0500;BOOST_ALL_NO_LIB;_FILE_OFFSET_BITS=64;BOOST_THREAD_USE_LIB;TORRENT_BUILDING_SHARED;TORRENT_LINKING_SHARED;UNICODE;TORRENT_DISABLE_ENCRYPTION;TORRENT_DHT_VERBOSE_LOGGING;TORRENT_DISABLE_INVARIANT_CHECKS;TORRENT_VERBOSE_LOGGING;TORRENT_VERBOSE_BANDWIDTH_LIMIT;TORRENT_STATS;TORRENT_DISK_STATS;TORRENT_UPNP_LOGGING"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -121,7 +121,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				AdditionalIncludeDirectories="..\include;..\include\libtorrent;..\zlib"
-				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;WIN32_LEAN_AND_MEAN;_WIN32_WINNT=0x0500;BOOST_ALL_NO_LIB;_FILE_OFFSET_BITS=64;BOOST_THREAD_USE_LIB;UNICODE;TORRENT_DISABLE_ENCRYPTION;TORRENT_VERBOSE_LOGGING"
+				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;WIN32_LEAN_AND_MEAN;_WIN32_WINNT=0x0500;BOOST_ALL_NO_LIB;_FILE_OFFSET_BITS=64;BOOST_THREAD_USE_LIB;UNICODE;TORRENT_DISABLE_ENCRYPTION;TORRENT_DHT_VERBOSE_LOGGING"
 				RuntimeLibrary="2"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
@@ -201,7 +201,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				AdditionalIncludeDirectories="..\include;..\include\libtorrent;..\zlib"
-				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;WIN32_LEAN_AND_MEAN;_WIN32_WINNT=0x0500;BOOST_ALL_NO_LIB;_FILE_OFFSET_BITS=64;BOOST_THREAD_USE_LIB;UNICODE;TORRENT_DISABLE_ENCRYPTION"
+				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;WIN32_LEAN_AND_MEAN;_WIN32_WINNT=0x0500;BOOST_ALL_NO_LIB;_FILE_OFFSET_BITS=64;BOOST_THREAD_USE_LIB;UNICODE;TORRENT_DISABLE_ENCRYPTION;TORRENT_DHT_VERBOSE_LOGGING"
 				RuntimeLibrary="0"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
@@ -281,7 +281,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				AdditionalIncludeDirectories="..\include;..\include\libtorrent;..\zlib"
-				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;WIN32_LEAN_AND_MEAN;_WIN32_WINNT=0x0500;BOOST_ALL_NO_LIB;_FILE_OFFSET_BITS=64;BOOST_THREAD_USE_LIB;UNICODE;_CRT_SECURE_NO_WARNINGS;_SCL_SECURE_NO_WARNINGS;TORRENT_DISABLE_ENCRYPTION;TORRENT_DISABLE_INVARIANT_CHECKS;TORRENT_VERBOSE_LOGGING;TORRENT_VERBOSE_BANDWIDTH_LIMIT;TORRENT_STATS;TORRENT_DISK_STATS;TORRENT_UPNP_LOGGING"
+				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;WIN32_LEAN_AND_MEAN;_WIN32_WINNT=0x0500;BOOST_ALL_NO_LIB;_FILE_OFFSET_BITS=64;BOOST_THREAD_USE_LIB;UNICODE;_CRT_SECURE_NO_WARNINGS;_SCL_SECURE_NO_WARNINGS;TORRENT_DISABLE_ENCRYPTION;TORRENT_DHT_VERBOSE_LOGGING;TORRENT_DISABLE_INVARIANT_CHECKS;TORRENT_VERBOSE_LOGGING;TORRENT_VERBOSE_BANDWIDTH_LIMIT;TORRENT_STATS;TORRENT_DISK_STATS;TORRENT_UPNP_LOGGING"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="1"
